chore(*): add placeholders for filtering and sorting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<smarter-table  [columns]="columns" [rows]="rows"></smarter-table>
+<smarter-table [filter]="true"
+               [columns]="columns"
+               [rows]="rows"
+></smarter-table>
