fix(sorting): add correct icon for different sort state

--- a/src/app/modules/smarter-table/smarter-table.component.html
+++ b/src/app/modules/smarter-table/smarter-table.component.html
@@ -2,7 +2,8 @@
   <thead>
   <tr>
     <th *ngFor="let column of _columns; let i = index" (click)="prepareSort(i)">{{column.name}}
-      <i *ngIf="column['has_sort']" class="fa fa-fw fa-sort"></i>
+      <i *ngIf="column['has_sort'] && column['sort_is_negative']" class="fa fa-long-arrow-down"></i>
+      <i *ngIf="column['has_sort'] && !column['sort_is_negative']" class="fa fa-long-arrow-up"></i>
     </th>
   </tr>
   </thead>
