--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.small-num {
+  width: 50px;
+}
+
+input {
+  border: 0.5px gray;
+}
