feat(pagination): implement pagination

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <smarter-table [filter]="true"
                [columns]="columns"
                [rows]="rows"
+               [can_delete]="true"
+               [can_edit]="true"
+               [page_size]="2"
+               [sort]="true"
+               [pagination]="true"
 ></smarter-table>
