--- a/src/app/modules/smarter-table/smarter-table.component.html
+++ b/src/app/modules/smarter-table/smarter-table.component.html
@@ -13,12 +13,12 @@
     <td *ngFor="let column of _columns">
       <div *ngIf="column.type == 'number'; then numberBlock; else otherTemp"></div>
       <ng-template #numberBlock >
-        <input class="small-num" type="number" [(ngModel)]="column['min_num']" (keyup)="runFilter()">
+        <input class="small-num" placeholder="min" type="number" [(ngModel)]="column['min_num']" (keyup)="runFilter()">
         to
-        <input class="small-num" type="number" [(ngModel)]="column['max_num']" (keyup)="runFilter()">
+        <input class="small-num" placeholder="max" type="number" [(ngModel)]="column['max_num']" (keyup)="runFilter()">
       </ng-template>
       <ng-template #otherTemp>
-        <input type="{{column.type}}" [(ngModel)]="column['filter']" (keyup)="runFilter()">
+        <input type="{{column.type}}" placeholder="search.." [(ngModel)]="column['filter']" (keyup)="runFilter()">
       </ng-template>
     </td>
   </tr>
