feat(actions): add edit and delete buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,6 @@
                [page_size]="2"
                [sort]="true"
                [pagination]="true"
+               [on_delete]="deletefn()"
+               [on_edit]="editfn()"
 ></smarter-table>
