--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,6 @@
                [pagination]="true"
                [on_delete]="deletefn()"
                [on_edit]="editfn()"
+               [inline_edit]="true"
+               [inline_edit_groups]="inline_edit_groups"
 ></smarter-table>
