--- a/src/app/modules/smarter-table/smarter-table.component.html
+++ b/src/app/modules/smarter-table/smarter-table.component.html
@@ -23,10 +23,18 @@
     </td>
     <td *ngIf="_can_delete || _can_edit">Actions</td>
   </tr>
-  <tr *ngFor="let row of data">
-    <td *ngFor="let item of row">{{item}}</td>
+  <tr *ngFor="let row of data; let i = index">
+    <td *ngFor="let item of row">
+      <div *ngIf="_inline_edit_row == i && item.inline_edit && item.inline_edit.type; then inlineEditColumn; else standardColumn"></div>
+      <ng-template #inlineEditColumn>
+        <inline-edit [type]="item.inline_edit.type"></inline-edit>
+      </ng-template>
+      <ng-template #standardColumn>
+        {{item.value}}
+      </ng-template>
+    </td>
     <td *ngIf="_can_edit || _can_delete">
-      <button *ngIf="_can_edit" (click)="on_edit">Edit</button>
+      <button *ngIf="_can_edit" (click)="editHandle(i)">Edit</button>
       <button *ngIf="_can_delete" (click)="on_delete">Delete</button>
     </td>
   </tr>
