--- a/src/app/modules/smarter-table/inline-edit/inline-edit.component.html
+++ b/src/app/modules/smarter-table/inline-edit/inline-edit.component.html
@@ -2,8 +2,6 @@
   <input type="text" *ngSwitchCase="'text'">
   <input type="number" *ngSwitchCase="'number'">
   <select  *ngSwitchCase="'dropdown'">
-    <option>hehehe</option>
-    <option>hehehe</option>
-    <option>hehehe</option>
+    <option *ngFor="let opt of _options">{{opt}}</option>
   </select>
 </div>
