--- a/src/app/modules/smarter-table/smarter-table.component.html
+++ b/src/app/modules/smarter-table/smarter-table.component.html
@@ -24,7 +24,7 @@
     </td>
     <td *ngIf="_can_delete || _can_edit">Actions</td>
   </tr>
-  <tr *ngFor="let row of data; let i = index">
+  <tr *ngFor="let row of data; let i = index" (click)="row_click_wrapper(i)">
     <td *ngFor="let item of row">
       <div *ngIf="_inline_edit_row == i && item.inline_edit && item.inline_edit.type; then inlineEditColumn; else standardColumn"></div>
       <ng-template #inlineEditColumn>
