fix(css): remove wrong imports from css

--- a/src/app/modules/smarter-table/smarter-table.component.css
+++ b/src/app/modules/smarter-table/smarter-table.component.css
@@ -1,3 +1,5 @@
+
+
 /* You can add global styles to this file, and also import other style files */
 .small-num {
   width: 60px !important;
@@ -6,4 +8,8 @@
 
 input {
   border: 0.5px gray;
+}
+
+*, button, a, p {
+  font-family: sans-serif;
 }
