--- a/src/app/modules/smarter-table/smarter-table.component.html
+++ b/src/app/modules/smarter-table/smarter-table.component.html
@@ -1,10 +1,14 @@
+<ng2-multiselect [options]="titles" [texts]="texts" [settings]="mySettings" [(ngModel)]="filterModel" (ngModelChange)="toggle($event)"></ng2-multiselect>
 <button *ngIf="_can_export" (click)="exportToExcel()" class="btn-primary"> Export to excel </button>
 <table class="table table-striped">
   <thead>
   <tr>
-    <th *ngFor="let column of _columns; let i = index" (click)="prepareSort(i)">{{column.name}}
-      <i *ngIf="column['has_sort'] && column['sort_is_negative']" class="fa fa-long-arrow-down"></i>
-      <i *ngIf="column['has_sort'] && !column['sort_is_negative']" class="fa fa-long-arrow-up"></i>
+    <th *ngFor="let column of _columns; let i = index" (click)="prepareSort(i)">
+      <div *ngIf="column.visible">
+        {{column.name}}
+        <i *ngIf="column['has_sort'] && column['sort_is_negative']" class="fa fa-long-arrow-down"></i>
+        <i *ngIf="column['has_sort'] && !column['sort_is_negative']" class="fa fa-long-arrow-up"></i>
+      </div>
     </th>
     <th *ngIf="_can_delete || _can_edit">Actions</th>
   </tr>
@@ -12,33 +16,44 @@
   <tbody>
   <tr *ngIf="_filter">
     <td *ngFor="let column of _columns">
-      <div *ngIf="column.type == 'number'; then numberBlock; else otherTemp"></div>
-      <ng-template #numberBlock >
-        <input class="small-num form-control" placeholder="min" type="number" [(ngModel)]="column['min_num']" (keyup)="runFilter()">
-        to
-        <input class="small-num form-control" placeholder="max" type="number" [(ngModel)]="column['max_num']" (keyup)="runFilter()">
-      </ng-template>
-      <ng-template #otherTemp>
-        <input type="{{column.type}}" class="form-control" placeholder="search.." [(ngModel)]="column['filter']" (keyup)="runFilter()">
-      </ng-template>
+      <div *ngIf="column.visible">
+        <div *ngIf="column.type == 'number'; then numberBlock; else otherTemp"></div>
+        <ng-template #numberBlock >
+          <input class="small-num form-control" placeholder="min" type="number" [(ngModel)]="column['min_num']" (keyup)="runFilter()">
+          to
+          <input class="small-num form-control" placeholder="max" type="number" [(ngModel)]="column['max_num']" (keyup)="runFilter()">
+        </ng-template>
+        <ng-template #otherTemp>
+          <input type="{{column.type}}" class="form-control" placeholder="search.." [(ngModel)]="column['filter']" (keyup)="runFilter()">
+        </ng-template>
+      </div>
     </td>
     <td *ngIf="_can_delete || _can_edit">Actions</td>
   </tr>
   <tr *ngFor="let row of data; let i = index" >
-    <td *ngFor="let item of row" (click)="row_click_wrapper(i)">
-      <div *ngIf="_inline_edit_row == i && item.inline_edit && item.inline_edit.type; then inlineEditColumn; else standardColumn"></div>
-      <ng-template #inlineEditColumn>
-        <inline-edit [options]="item.inline_edit.options" [type]="item.inline_edit.type"></inline-edit>
-      </ng-template>
-      <ng-template #standardColumn >
-        {{item.value}}
-      </ng-template>
+    <td *ngFor="let item of row.row_data" (click)="row_click_wrapper(row, i)">
+      <div *ngIf="item && item.visible">
+        <div *ngIf="_inline_edit_row == i && item.inline_edit && item.inline_edit.type; then inlineEditColumn; else standardColumn"></div>
+        <ng-template #inlineEditColumn>
+          <div *ngIf="_inline_edit_groups_dynamic; then dynamicInlineEdit; else standardInlineEdit"></div>
+          <ng-template #standardInlineEdit>
+            <inline-edit [options]="item.inline_edit.options" [type]="item.inline_edit.type"></inline-edit>
+          </ng-template>
+          <ng-template #dynamicInlineEdit>
+            <inline-edit [options]="dynamic_inline_data(row)" [type]="item.inline_edit.type"></inline-edit>
+          </ng-template>
+
+        </ng-template>
+        <ng-template #standardColumn >
+          {{item.value}}
+        </ng-template>
+      </div>
     </td>
-    <td *ngIf="_can_edit || _can_delete">
-      <button *ngIf="_can_edit && _inline_edit_row != i" class="btn-success" (click)="editHandle(i)">Edit</button>
-      <button *ngIf="_can_delete && _inline_edit_row != i" class="btn-danger" (click)="edit_delete_wrapper()">Delete</button>
-      <button *ngIf="_inline_edit_row == i " class="btn-success" (click)="edit_save_wrapper()">Save</button>
-      <button *ngIf="_inline_edit_row == i " class="btn-primary" (click)="edit_cancel_wrapper()">Cancel</button>
+    <td *ngIf="_can_edit || _can_delete" class="action-col">
+      <button *ngIf="_can_edit && _inline_edit_row != i" class="btn-success" (click)="editHandle(row, i)">Edit</button>
+      <button *ngIf="_can_delete && _inline_edit_row != i" class="btn-danger" (click)="edit_delete_wrapper(row, i)">Delete</button>
+      <button *ngIf="_inline_edit_row == i " class="btn-success" (click)="edit_save_wrapper(row, i)">Save</button>
+      <button *ngIf="_inline_edit_row == i " class="btn-primary" (click)="edit_cancel_wrapper(row, i)">Cancel</button>
     </td>
   </tr>
   </tbody></table>
