--- a/src/app/modules/smarter-table/smarter-table.component.css
+++ b/src/app/modules/smarter-table/smarter-table.component.css
@@ -12,6 +12,11 @@ input {
   border: 0.5px gray;
 }
 
+.no-h-margin {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
 *, button, a, p {
   font-family: sans-serif;
 }
