fix(font-awesome): remove wrong font, update readme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
                [page_size]="6"
                [sort]="true"
                [pagination]="true"
-               [on_delete]="deletefn()"
-               [on_edit]="editfn()"
+               (delete)="deletefn()"
+               (edit)="editfn()"
                [inline_edit]="true"
                [inline_edit_groups]="inline_edit_groups"
 ></smarter-table>
