feat(table): add danger row classing and correct data retrieval on inline edit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
                [pagination]="true"
                (delete)="deletefn()"
                (edit)="editfn()"
+               (save)="savefn($event)"
                [inline_edit]="true"
+               [danger]="'overlap'"
                [inline_edit_groups]="inline_edit_groups"
 ></smarter-table>
