--- a/src/app/modules/smarter-table/smarter-table.component.css
+++ b/src/app/modules/smarter-table/smarter-table.component.css
@@ -17,6 +17,10 @@ input {
   margin-right: 0 !important;
 }
 
+.red {
+  background-color: red !important;
+}
+
 /**, button, a, p {*/
   /*font-family: sans-serif;*/
 /*}*/
